[package]
name = "mrrowisp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
bytes = "1.6"
futures = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
portable-pty = "0.8"
anyhow = "1.0"
httparse = "1.9"
mimalloc = { version = "0.1", default-features = false, features = ["secure"] }
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
